indexing nulls allowed to allow searching